# bitcoin_node_handshake

./: Cargo.toml  README.md  local_config.json  target_node_config.json
src/: bitcoin_node.rs  configs.rs  main.rs  message_constructor.rs  sizes.rs  utils.rs
src/message_structures/: header.rs  mod.rs  network_address.rs  version.rs
